blog/kubewebhook/deploy/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-annotate-webhook
  labels:
    app: pod-annotate-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-annotate-webhook
  template:
    metadata:
      labels:
        app: pod-annotate-webhook
    spec:
      containers:
        - name: pod-annotate-webhook
          image: kubewebhook:latest
          imagePullPolicy: Never
          args:
            - -tls-cert-file=/etc/webhook/certs/cert.pem
            - -tls-key-file=/etc/webhook/certs/key.pem
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: pod-annotate-webhook-certs
---
apiVersion: v1
kind: Service
metadata:
  name: pod-annotate-webhook
  labels:
    app: pod-annotate-webhook
spec:
  ports:
  - port: 443
    targetPort: 8080
  selector:
    app: pod-annotate-webhook
