blog/kubewebhook/deploy/webhook-registration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-annotate-webhook
  labels:
    app: pod-annotate-webhook
    kind: mutator
webhooks:
  - name: pod-annotate-webhook.slok.xyz
    clientConfig:
      service:
        name: pod-annotate-webhook
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMzVENDQWNVQ0ZCc2QvZmVOYVRsMjVGaEJLM3J3TXpLYndEM2FNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1Dc3gKS1RBbkJnTlZCQU1NSUhCdlpDMWhibTV2ZEdGMFpTMTNaV0pvYjI5ckxtUmxabUYxYkhRdWMzWmpNQjRYRFRJdwpNVEF3TnpBek1qZ3lNVm9YRFRJeE1UQXdOekF6TWpneU1Wb3dLekVwTUNjR0ExVUVBd3dnY0c5a0xXRnVibTkwCllYUmxMWGRsWW1odmIyc3VaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUN2bko4YTFORzczN21WQ1lrbWhzc2ZDQ2lEU0lmZUlrTFN0Rmx2OWtjQWUwQ28xOVpTYU9OaQpsNXNnWW9iQ0ly [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
